--- a/WebContent/html5/newpedido.html
+++ b/WebContent/html5/newpedido.html
@@ -125,9 +125,9 @@
 					cell1.innerHTML = produtos[selecionado].id;
 					cell2.innerHTML = produtos[selecionado].nome;
 					cell3.innerHTML = "R$ "+produtos[selecionado].preco;
-					cell4.innerHTML = "<input type='text' name='quantidade' id='quantidade' value='1' onchange='altera_quantidade("+selecionado+");total_pedido();' style='width:50px;'>";
-					cell5.innerHTML = "<a href='#' class='delete' value='"+produtos[selecionado].id+"'><img src='../img/x.png' onclick='removeProduto("+selecionado+");total_pedido("+selecionado+");' height='15' width='15'></a>";
-					pedido[selecionado] = produtos[selecionado];
+					cell4.innerHTML = "<input type='text' name='quantidade' id='"+produtos[selecionado].id+"' value='1' onchange='altera_quantidade("+produtos[selecionado].id+");total_pedido();' style='width:50px;'>";
+					cell5.innerHTML = "<a href='#' class='delete' value='"+produtos[selecionado].id+"'><img src='../img/x.png' onclick='removeProduto("+produtos[selecionado].id+");total_pedido("+selecionado+");' height='15' width='15'></a>";
+					pedido.push(produtos[selecionado]);
 				}
 			}else{
 				alert("Produto já adicionado, altere a quantidade.");
@@ -135,29 +135,37 @@
 		}
 		
 		function removeProduto(remove){
-			    $("#myTable .delete").on("click",function() {
-			        var td = $(this).parent();
-			        var tr = td.parent();
-			        tr.remove();
-			    });
-			    delete (pedido[remove]);
-			    $("#total").html("R$ "+total);
+			//Remove o produto da lista
+			$("#myTable .delete").on("click",function() {
+			     var td = $(this).parent();
+			     var tr = td.parent();
+			   	 tr.remove();
+			});
+			for (var i =0; i < pedido.length; i++)
+				if (pedido[i].id === remove) {
+			    pedido.splice(i,1);
+			break;
+			}
 		}
 		
 		 function total_pedido(){
 			//Realiza a soma dos pedidos da tabela e atualiza o valor total do pedido
-				total = 0;
-				pedido.forEach(function(value) {
-		  			total += value.preco * value.quantidade;
-				});
+			total = 0;
+			pedido.forEach(function(value) {
+		  		total += value.preco * value.quantidade;
+			});
 			$("#total").html("R$ "+total);
 		 }
-
 		
 		function altera_quantidade(selecionado){
-			var qntd = $("#quantidade").val();
-			$("#quantidade").attr("value", qntd);
-			pedido[selecionado].quantidade = qntd;
+			//Altera a quantidade do item do pedido
+			var qntd = $("#"+selecionado+"").val();
+			$("#"+selecionado+"").attr("value", qntd);
+			for (var i =0; i < pedido.length; i++)
+				   if (pedido[i].id === selecionado) {
+				      pedido[i].quantidade = qntd;
+				      break;
+				   }
 		}
 		
 		function fechar_pedido() {
@@ -176,7 +184,6 @@
 			         alert("Erro" + xhr.responseText);
 			     }
 			 });
-			alert(JSON.stringify(pedido));
 		}
 		
 		function gerar_senha(){
@@ -185,33 +192,27 @@
 			$("#senha").html("Senha: "+senha);
 		}
 		
-		function updateClock(){
+		function updateClock(){ //Relógio
 		 	var currentTime = new Date ( );
 		  	var currentHours = currentTime.getHours ( );
 		  	var currentMinutes = currentTime.getMinutes ( );
 		  	var currentSeconds = currentTime.getSeconds ( );
-		  	// Pad the minutes and seconds with leading zeros, if required
 		  	currentMinutes = ( currentMinutes < 10 ? "0" : "" ) + currentMinutes;
 		  	currentSeconds = ( currentSeconds < 10 ? "0" : "" ) + currentSeconds;
-		  	// Compose the string for display
 		  	var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds;
-		$("#clock").html(currentTimeString);
-	}
-	$(document).ready(function(){
-	   setInterval('updateClock()', 1000); //Update do relógio a cada segundo
-	});
+			$("#clock").html(currentTimeString);
+		}
+
+		function verifica_pedido(){
+		//Botão somente para checar o json que será mandado ao PedidoWebService
+		alert(JSON.stringify(pedido));	
+		}
 	
-	function verifica_pedido(){
-		//Botão para checar o json que será mandado ao PedidoWebService
-		alert(JSON.stringify(pedido));
-		alert(JSON.stringify(produtos));
-		
-	}
-	
-	$(document).ready(function(){
-		$("#header").load('menu.html'); //Inclui o menu no topo da página
-		$("#footer").load('footer.html'); //Inclui o footer
-	});
+		$(document).ready(function(){
+			setInterval('updateClock()', 1000); //Update do relógio a cada segundo
+			$("#header").load('menu.html'); //Inclui o menu no topo da página
+			$("#footer").load('footer.html'); //Inclui o footer
+		});
 	
 	</script>
 </body>
