--- a/WebContent/html5/menu.html
+++ b/WebContent/html5/menu.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Menu</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../css/sweetalert-master/dist/sweetalert.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../css/sweetalert-master/dist/sweetalert.css">
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
         <style>
