--- a/WebContent/html5/newproduto.html
+++ b/WebContent/html5/newproduto.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Virtual Queue</title>
-        <meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-		<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
-    </head>
+<head>
+<title>Virtual Queue</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
+</head>
     <body style="background-color: #F0F0F0">
     	<div id="header"></div>
         <div class="container">
@@ -16,19 +16,19 @@
                 <div class="form-group">
                     <label for="inputName" style="margin-top:6px;">Nome</label>
                     <div class="col-sm-5">                  
-                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do produto aqui ..." required>
+                        <input type="text" class="form-control" id="nome" name="nome" placeholder="Nome do produto ..." required>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="inputDescription" style="margin-top:6px;">Descrição do produto</label>
+                    <label for="inputDescription" style="margin-top:6px;">Descrição</label>
                     <div class="col-sm-5">                   
-                        <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Descreva o produto aqui .." required>
+                        <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Descreva o produto ..." required>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputCategory" style="margin-top:6px;">Categoria</label>
                     <div class="col-sm-5">                  
-                        <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Categoria do seu produto ..." required>
+                        <input type="text" class="form-control" id="tipo" name="tipo" placeholder="Categoria do produto ..." required>
                     </div>
                 </div>
                 <div class="form-group">
@@ -38,12 +38,10 @@
                     </div>                   
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-offset col-sm-5">
-                        <input type="submit" class="btn btn-default" value="Salvar">
+                    <div class="col-sm-1">
+                        <input type="submit" id="submit" class="btn btn-primary" value="Salvar">
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-offset col-sm-5">
+                    <div class="col-sm-1">
                         <input type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">
                     </div>
                 </div>
@@ -62,7 +60,13 @@
     	 .val('')
     	 .removeAttr('checked')
     	 .removeAttr('selected');
+    	
     }
+    
+    $('#form').submit(function(){
+        swal("Produto Cadastrado!","","success")
+    });
+   
     </script>
     </body>
 </html>
