--- a/WebContent/html5/footer.html
+++ b/WebContent/html5/footer.html
@@ -11,11 +11,10 @@
         <style>
             @import url(http://fonts.googleapis.com/css?family=Lora|Oswald);
             * {margin:0px; padding:0px;  }
-            .footer {position:fixed; bottom:0; width:100%;height:70px;
-                     background-color:#F0F0F0; padding:10px; text-align:center;}
+            .footer {position:fixed; bottom:0; width:100%;height:70px; padding:10px; text-align:center;}
             </style>
         </head>
-        <body>    
+        <body>
             <div class="footer">
 	            <h5 style="color:#000; font-family: 'Oswald', arial, sans-serif;">Copyright © 2015</h5>
 	            <label class="autor" style="color:#000; letter-spacing:1px; font-family:sans-serif; font-size: 10px;">Matheus S. Hofart | Gabriel Tagliari Rodrigo | Elisa B. D. Pereira</label>
