--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Virtual Queue</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
+		<meta charset="UTF-8">
+		<meta name="google-signin-scope" content="profile email">
+		<meta name="google-signin-client_id" content="219833697129-61gsh6oa6mlnqsbs7jl94s9i7uursn3n.apps.googleusercontent.com">
+		<script src="https://apis.google.com/js/platform.js" async defer></script>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
   </head>
   <body style="background-color: #F0F0F0">
     <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<h2 class="text-center">Bem-vindo!</h2><br>
-			<form class="form-horizontal" role="form">
+			<form class="form-horizontal" action="newpedido.html" role="form">
 				<div class="form-group">
 					<label for="inputEmail3" class="col-sm-3 control-label">
 						Email
@@ -35,21 +38,34 @@
 					<div class="col-sm-offset-3 col-sm-10">
 						<div class="checkbox">
 							<label>
-								<input type="checkbox"> Mantenha-me conectado
+								<input type="checkbox" class="checkbox">Mantenha-me conectado
 							</label>
 						</div>
 					</div>
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-3 col-sm-10">
-						<button type="submit" class="btn btn-default">
-							Entrar
-						</button>
+						<button type="submit" class="btn btn-default">Entrar</button>
+						<div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
 					</div>
 				</div>
 			</form>
 		</div>
 	</div>
 </div>
+  <script>
+      function onSignIn(googleUser) {
+        // Useful data for your client-side scripts:
+        var profile = googleUser.getBasicProfile();
+        console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+        console.log("Name: " + profile.getName());
+        console.log("Image URL: " + profile.getImageUrl());
+        console.log("Email: " + profile.getEmail());
+
+        // The ID token you need to pass to your backend:
+        var id_token = googleUser.getAuthResponse().id_token;
+        console.log("ID Token: " + id_token);
+      };
+    </script>
   </body>
 </html>
