ADD PDF, ADMIN/USER, DELETA PRODUTOS BD

--- a/WebContent/html5/admin/menu.html
+++ b/WebContent/html5/admin/menu.html
@@ -4,10 +4,13 @@
         <meta charset="UTF-8">
         <title>Menu</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="../css/sweetalert-master/dist/sweetalert.min.js"></script>
-		<link rel="stylesheet" type="text/css" href="../css/sweetalert-master/dist/sweetalert.css">
+        <script src="../../css/sweetalert-master/dist/sweetalert.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="../../css/sweetalert-master/dist/sweetalert.css">
         <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> -->
+        <link rel="stylesheet" type="text/css" href="../../css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+        <script src="../../css/bootstrap.min.js"></script>
         <style>
             @import url(http://fonts.googleapis.com/css?family=Lora|Oswald);
             *{padding:0px;}
@@ -54,12 +57,18 @@
                             <li><a class="sub" href="newpedido.html">GERAR PEDIDO</a></li>
                             <li><a class="sub" href="pedidos.html">LISTAR PEDIDOS</a></li>
                         </ul>
+                    </li>
+                    <li><a class="principal">USUÁRIO</a>
+                        <ul>
+                            <li><a class="sub" href="newuser.html">CADASTRAR USUÁRIO</a></li>
+                            <li><a class="sub" href="users.html">LISTAR USUÁRIOS</a></li>
+                        </ul>
                     </li>                               
                 </ul>
             </nav>
             <nav class="menu-right">
                 <ul>
-                    <li><a href="login.html">SAIR</a></li>
+                    <li><a href="../login.html">SAIR</a></li>
                 </ul>
             </nav>
         </div>   
