--- a/WebContent/html5/admin/newpedido.html
+++ b/WebContent/html5/admin/newpedido.html
@@ -5,13 +5,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
+	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 	<!-- Scripts do jsPDF -->
-	<script type="text/javascript" src="../js/jsPDF/jspdf.js"></script>
-	<script type="text/javascript" src="../js/jsPDF/jspdf.plugin.standard_fonts_metrics.js"></script> 
-	<script type="text/javascript" src="../js/jsPDF/jspdf.plugin.split_text_to_size.js"></script>               
-	<script type="text/javascript" src="../js/jsPDF/jspdf.plugin.from_html.js"></script>
+	<script type="text/javascript" src="../../js/jsPDF/jspdf.js"></script>
+	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.standard_fonts_metrics.js"></script> 
+	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.split_text_to_size.js"></script>               
+	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.from_html.js"></script>
 </head>
 <body onload="updateClock()" style="background-color: #F0F0F0">
 	<div id="header"></div>
@@ -38,7 +38,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td align="right"><b>valor: </b></td>
+					<td align="right"><b>TOTAL: </b></td>
 					<td id="valor"><b>R$0,00</b></td>
 				</tr>
 			</table>
@@ -131,7 +131,7 @@
 					cell2.innerHTML = produtolist[selecionado].nome;
 					cell3.innerHTML = "R$ "+produtolist[selecionado].preco;
 					cell4.innerHTML = "<input type='text' name='quantidade' id='"+produtolist[selecionado].id+"' value='1' onchange='altera_quantidade("+produtolist[selecionado].id+");valor_pedido();' style='width:50px;'>";
-					cell5.innerHTML = "<a href='#' class='delete' value='"+produtolist[selecionado].id+"'><img src='../img/x.png' onclick='removeProduto("+produtolist[selecionado].id+");valor_pedido("+selecionado+");' height='15' width='15'></a>";
+					cell5.innerHTML = "<a href='#' class='delete' value='"+produtolist[selecionado].id+"'><img src='../../img/x.png' onclick='removeProduto("+produtolist[selecionado].id+");valor_pedido("+selecionado+");' height='15' width='15'></a>";
 					p.produtos.push(produtolist[selecionado]);
 				}
 			}else{
@@ -180,7 +180,7 @@
 		function fechar_pedido() {
 			//Finaliza e envia o Pedido
 			if (p.produtos == 0){
-				swal("Seu pedido está nulo!","Adicione ao menos um produto...");
+				swal("Seu pedido está vazio!","Adicione ao menos um produto...");
 			} else {
 				p.senha = senha;
 				$.ajax({
@@ -232,7 +232,6 @@
 			//Gera uma senha randomica automaticamente
 			senha = Math.floor((Math.random() * 100)+1);
 			$("#senha").html("Senha: "+senha);
-			
 		}
 		
 		function updateClock(){ //Relógio
