--- a/WebContent/html5/admin/newproduto.html
+++ b/WebContent/html5/admin/newproduto.html
@@ -5,14 +5,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
+	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 </head>
     <body style="background-color: #F0F0F0">
     	<div id="header"></div>
         <div class="container">
         	<div><h2>Cadastro de Produtos</h2><br></div>
-         	<form id="form" class="form-horizontal" action="../VQ/produto/createform" method="GET">
+         	<form id="form" class="form-horizontal" action="../../VQ/produto/createform" method="GET">
                 <div class="form-group">
                     <label for="inputName" style="margin-top:6px;">Nome</label>
                     <div class="col-sm-5">                  
@@ -60,7 +60,6 @@
     	 .val('')
     	 .removeAttr('checked')
     	 .removeAttr('selected');
-    	
     }
     
     $('#form').submit(function(){
