--- a/WebContent/html5/admin/newuser.html
+++ b/WebContent/html5/admin/newuser.html
@@ -1,40 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <title>Virtual Queue</title>
-
-<link href="../css/main.css" rel="stylesheet" media="screen">
-<link href="../css/bootstrap.min.css" rel="stylesheet" media="screen">
-<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-<script src="../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
-
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 </head>
-<body>
-
-<nav class="navbar navbar-default">
-        <div>                
-        <a class="navbar-brand" href="login.html"> Book Store</a>
+    <body style="background-color: #F0F0F0">
+    	<div id="header"></div>
+        <div class="container">
+        	<div><h2>Cadastro de Usuário</h2><br></div>
+         	<form id="form" class="form-horizontal" action="../../VQ/user/createform" method="GET">
+                <div class="form-group">
+                    <label for="inputName" style="margin-top:6px;">Email</label>
+                    <div class="col-sm-5">                  
+                        <input type="email" class="form-control" id="email" name="email" placeholder="example@example.com" required>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="inputDescription" style="margin-top:6px;">Senha	</label>
+                    <div class="col-sm-5">                   
+                        <input type="password" class="form-control" id="password" name="password" placeholder="*******" required>
+                    </div>
+                </div>
+              <div class="form-group">
+                    <div class="col-sm-1">
+                        <input type="submit" id="submit" class="btn btn-primary" value="Cadastrar">
+                    </div>
+                    <div class="col-sm-1">
+                        <input type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">
+                    </div>
+                </div>
+            </form>
         </div>
-</nav>
-
-<h2>Novo Usuário</h2>
-	<form id="newuserform" action="../bookstore/user/createform" method="GET">
-	    <div class="form-group">	
-        <label >email</label>
-        <input class="form-control" type="text" name="email" id="email"/>
-        </div>
-        <div class="form-group">
-        <label >password</label>
-        <input class="form-control" type="password" name='password' id='password' />
-        </div>
-        <div class="form-group">
-        <label>Address</label>
-        <input class="form-control" type="text" name='address' id='address'/> 
-        </div>
-        <div class="form-group">
-  			<button type="submit">Save</button>
-  		</div>
-      </form>
-</body>
+        <div id="footer"></div>
+    <script>
+    $(document).ready(function(){
+		$("#header").load('menu.html');
+		$("#footer").load('footer.html');
+	});
+    
+    function limpa_form(){	
+    	$(':input','#form')
+    	 .not(':button, :submit, :reset, :hidden')
+    	 .val('')
+    	 .removeAttr('checked')
+    	 .removeAttr('selected');
+    }
+    
+    $('#form').submit(function(){
+        swal("Usuário Cadastrado!","","success")
+    });
+   
+    </script>
+    </body>
 </html>
