--- a/WebContent/html5/admin/pedidos.html
+++ b/WebContent/html5/admin/pedidos.html
@@ -5,22 +5,22 @@
 <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
-	<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
-	<script src="../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
-	<link href="../css/jquery.dynatable.css" rel="stylesheet" media="screen">
+	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
+	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
+	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 </head>
 <body style="background-color: #F0F0F0">
 <div id="header"></div>
 <div class="container">
 <div><h2>Lista de Pedidos</h2><br></div>
 <div>
-<table id="my-table" class="table table-condensed">
+<table id="my-table" class="table table-hover">
   <thead>
   	<tr>
-  		<th style="color: #000000;">Id</th>
-    	<th>Valor</th>
+  		<th>Id</th>
     	<th>Senha</th>
+    	<th>Valor</th>
   	</tr>
   </thead>
   <tbody>
