--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8"><title>Insert title here</title>
-<link href="../../css/main.css" rel="stylesheet" media="screen">
-<link href="../../css/bootstrap.min.css" rel="stylesheet" media="screen">
+<meta charset="UTF-8"><title>Virtual Queue</title>
 <script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="../../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
-<script src="../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
-<link href="../css/jquery.dynatable.css" rel="stylesheet" media="screen">
+<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
+<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 </head>
-<body>
+<body style="background-color: #F0F0F0">
+<div id="header"></div>
+<div class="container">
+<div><h2>Lista de Usuários</h2><br></div>
 <div>
-<table id="my-table" class="table table-condensed">
+<table id="my-table" class="table table-hover">
   <thead>
- 	<tr>
-	    <th>Email</th>
-	    <th>Password</th>
-	    <th>Address</th>
+  	<tr>
+  		<th>Id</th>
+  		<th>Email</th>
+    	<th>Password</th>
   	</tr>
   </thead>
   <tbody>
   </tbody>
 </table>
 </div>
-
+</div>
+<div id="footer"></div>
 <script>
 $.ajax({
-  url: '/lojaUnasp/bookstore/user/list',
+  url: '/VirtualQueue/VQ/user/list',
   success: function(data){
     $('#my-table').dynatable({
       dataset: {
@@ -36,8 +38,10 @@ $.ajax({
   }
 });
 
+$(document).ready(function(){
+	$("#header").load('menu.html');
+	$("#footer").load('footer.html');
+});
 </script>
-
-
 </body>
 </html>
