--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>VirtualQueue</title>
         <meta charset="UTF-8">
-        <meta name="google-signin-scope" content="profile email">
-		<meta name="google-signin-client_id" content="219833697129-61gsh6oa6mlnqsbs7jl94s9i7uursn3n.apps.googleusercontent.com">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="../css/sweetalert-master/dist/sweetalert.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="../css/sweetalert-master/dist/sweetalert.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="../css/style.css" />
-        <script src="https://apis.google.com/js/platform.js" async defer></script>
-        <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-        <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+        <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
+		<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
     </head>
     <body>
         <div class="container">
-        	<form method="post" action="">
                 <label for="email">E-mail</label>
                 <input type="email" id='email' placeholder="E-mail">
                 <label for="password">Senha</label>
                 <input type="password" id='password' placeholder="Senha">
-                <button>Entrar</button>
-                <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
-            </form>
+                <input type="submit" id="submit" value="Entrar" onclick="valida()">
         </div>
         <script>
-            function supportsPlaceholder() {
+           
+        	function supportsPlaceholder() {
                 return 'placeholder' in document.createElement('input') && 'placeholder' in document.createElement('textarea');
             }
+            
             jQuery(function ($) {
                 function supportsPlaceholder() {
                     return 'placeholder' in document.createElement('input') &&
@@ -36,17 +34,18 @@
                     $('html').addClass('no-placeholder');
                 }
             });
-            function onSignIn(googleUser) {
-                // Useful data for your client-side scripts:
-                var profile = googleUser.getBasicProfile();
-                console.log("ID: " + profile.getId()); // Don't send this directly to your server!
-                console.log("Name: " + profile.getName());
-                console.log("Image URL: " + profile.getImageUrl());
-                console.log("Email: " + profile.getEmail());
-                // The ID token you need to pass to your backend:
-                var id_token = googleUser.getAuthResponse().id_token;
-                console.log("ID Token: " + id_token);
-              };
+			
+            function valida(){
+            	var email = $("#email").val();
+	            var senha = $("#password").val();
+	            	if (email == "admin@admin.com" && senha == "admin") {
+	            		window.location = "admin/newproduto.html";
+					} else if(email == "user@user.com" && senha == "user"){
+						window.location = "users/newproduto.html";
+					}else{
+						swal("","Usuário e/ou senha inválido")
+					}
+            }
         </script>
     </body>
 </html>
