--- a/WebContent/html5/admin/newpedido.html
+++ b/WebContent/html5/admin/newpedido.html
@@ -33,7 +33,7 @@
 					<th>Código</th>
 					<th>Nome</th>
 					<th>Preço</th>
-					<th id="bypass">Quantidade</th>
+					<th>Quantidade</th>
 					<th>Remover</th>
 				</tr>
 				<tbody>
@@ -304,27 +304,6 @@
 				window.location = "newpedido.html";
 		    }, margins);
 		}
-		
-		
-		
-		
-		
-		
-		
-		/* function pedido_pdf(){
-			var columns = ["Código", "Nome", "Quantidade", "Preço"];
-			var data = [
-			            {"id": 1, "nome": "Shaw", "quantidade": "Tanzania", "preco": "92.44.246.31"},
-			            {"id": 1, "nome": "Shaw", "quantidade": "Tanzania", "preco": "92.44.246.31"}		            
-			        ];
-			alert(data);
-			alert(JSON.stringify(data));
-			var doc = new jsPDF('p', 'pt');
-			doc.text(20,20,"TEste");
-			doc.autoTable(columns, data);
-			doc.output('dataurlnewwindow');		
-			window.location = "newpedido.html";
-		} */
 	</script>
 </body>
 </html>
