--- a/WebContent/html5/users/newpedido.html
+++ b/WebContent/html5/users/newpedido.html
@@ -12,8 +12,8 @@
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.standard_fonts_metrics.js"></script> 
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.split_text_to_size.js"></script>               
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.from_html.js"></script>
-	<script src="../../js/jsPDF/jspdf.min.js"></script>
-	<script src="../../js/jsPDF/jspdf.plugin.autotable.js"></script>
+	<script type="text/javascript" src="../../js/jsPDF/jspdf.min.js"></script>
+	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.autotable.js"></script>
 </head>
 <body onload="updateClock()" style="background-color: #F0F0F0">
 	<div id="header"></div>
@@ -27,7 +27,7 @@
 				<input type="submit" class="btn btn-default" value="Adicionar" onclick="addProduto();valor_pedido();" style="margin-top: 10px;">
 			</div>
 		</div>
-		<div class="">
+		<div id="customers">
 			<table id="myTable" border="1" class="table table-hover" style="background-color: #fff;">
 				<tr style="background-color:#F8F8F8;">
 					<th>Código</th>
@@ -53,7 +53,7 @@
 		</div>
 		<div class="form-group">
 			<div class="col-sm-offset">
-				<input type="submit" class="btn btn-primary" value="Finalizar Pedido" onclick="fechar_pedido()"	style="margin-top: 10px;">
+				<input type="submit" id="fecha" class="btn btn-primary" value="Finalizar Pedido" onclick="fechar_pedido()"	style="margin-top: 10px;">
 				<input type="submit" class="btn btn-default" value="Ver Dados Pedido" onclick="verifica_pedido()"	style="margin-top: 10px;">
 			</div>
 		</div>
@@ -207,7 +207,7 @@
 				    		closeOnCancel: false }, 
 				    		function(isConfirm){   
 				    			if (isConfirm) {     
-				    				pedido_pdf();
+				    				demoFromHTML();
 				    			} else {
 				    				swal({   
 							    		title: "",   
@@ -251,7 +251,9 @@
 
 		function verifica_pedido(){
 		//Botão somente para checar o json que será mandado ao PedidoWebService
-		alert(JSON.stringify(p));	
+		alert(JSON.stringify(p));
+		alert(JSON.stringify(p.produtos[0]));
+		alert(JSON.stringify(p.produtos[1]));
 		}
 	
 		$(document).ready(function(){
@@ -260,13 +262,47 @@
 			$("#footer").load('footer.html'); //Inclui o footer
 		});
 		
-		function pedido_pdf(){
-			var columns = ["Código", "Nome", "Preço", "Quantidade"];
-			var data = ["","","",""];
-			var doc = new jsPDF('p', 'pt');
-			doc.autoTable(columns, data);
-			doc.output('dataurlnewwindow');		
-			window.location = "newpedido.html";
+		function demoFromHTML() {
+		    var pdf = new jsPDF('p', 'pt', 'letter');
+		    pdf.setFontSize(22);
+		    pdf.text(20, 20, 'Pedido');
+		    // source can be HTML-formatted string, or a reference
+		    // to an actual DOM element from which the text will be scraped.
+		    source = $('#customers')[0];
+
+		    // we support special element handlers. Register them with jQuery-style 
+		    // ID selector for either ID or node name. ("#iAmID", "div", "span" etc.)
+		    // There is no support for any other type of selectors 
+		    // (class, of compound) at this time.
+		    specialElementHandlers = {
+		        // element with id of "bypass" - jQuery style selector
+		        '#bypassme': function (element, renderer) {
+		            // true = "handled elsewhere, bypass text extraction"
+		            return true
+		        }
+		    };
+		    margins = {
+		        top: 80,
+		        bottom: 60,
+		        left: 40,
+		        width: 522
+		    };
+		    // all coords and widths are in jsPDF instance's declared units
+		    // 'inches' in this case
+		    pdf.fromHTML(
+		    source, // HTML string or DOM elem ref.
+		    margins.left, // x coord
+		    margins.top, { // y coord
+		        'width': margins.width, // max width of content on PDF
+		        'elementHandlers': specialElementHandlers
+		    },
+
+		    function (dispose) {
+		        // dispose: object with X, Y of the last line add to the PDF 
+		        //          this allow the insertion of new lines after html
+		    	pdf.output('dataurlnewwindow');		
+				window.location = "newpedido.html";
+		    }, margins);
 		}
 	</script>
 </body>
