--- a/WebContent/html5/admin/menu.html
+++ b/WebContent/html5/admin/menu.html
@@ -45,30 +45,30 @@
         <div class="container">
             <nav class="menu">
                 <ul>
-                    <li><a class="principal">HOME</a></li>
-                    <li><a class="principal">PRODUTO</a>
+                    <li><a class="principal" href="home.html"><span class="glyphicon glyphicon-home"></span> HOME</a></li>
+                    <li><a class="principal"><span class="glyphicon glyphicon-apple"></span> PRODUTO</a>
                         <ul>
                             <li><a class="sub" href="newproduto.html">CADASTRO DE PRODUTOS</a></li>
                             <li><a class="sub" href="produtos.html">LISTAR PRODUTOS</a></li>
                         </ul>
                     </li>
-                    <li><a class="principal">PEDIDO</a>
+                    <li><a class="principal"><span class="glyphicon glyphicon-shopping-cart"></span> PEDIDO</a>
                         <ul>
                             <li><a class="sub" href="newpedido.html">GERAR PEDIDO</a></li>
                             <li><a class="sub" href="pedidos.html">LISTAR PEDIDOS</a></li>
                         </ul>
-                    </li>
-                    <li><a class="principal">USUÁRIO</a>
+                    </li>  
+                    <li><a class="principal"><span class="glyphicon glyphicon-user"></span> USUÁRIOS</a>
                         <ul>
                             <li><a class="sub" href="newuser.html">CADASTRAR USUÁRIO</a></li>
                             <li><a class="sub" href="users.html">LISTAR USUÁRIOS</a></li>
                         </ul>
-                    </li>                               
+                    </li>                             
                 </ul>
             </nav>
             <nav class="menu-right">
                 <ul>
-                    <li><a href="../login.html">SAIR</a></li>
+                    <li><a href="../login.html"><span class="glyphicon glyphicon-user"></span> SAIR</a></li>
                 </ul>
             </nav>
         </div>   
