--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8"><title>Virtual Queue</title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 <script src="../../js/jquery/jquery.serializejson.js" type="text/javascript"></script>
 <script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
