--- a/WebContent/html5/admin/menu.html
+++ b/WebContent/html5/admin/menu.html
@@ -40,7 +40,7 @@
     </head>
     <body>
         <div class="background">
-            <nav style="background-color:#585858; padding: 30px; box-shadow:0px 2px 10px #000;"></nav>
+            <nav style="background-color:#141E5F; padding: 30px; box-shadow:0px 1px 5px #4E4B4B;"></nav>
         </div>
         <div class="container">
             <nav class="menu">
