--- a/WebContent/html5/admin/produtos.html
+++ b/WebContent/html5/admin/produtos.html
@@ -10,7 +10,7 @@
 	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
 	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 </head>
-<body style="background-color: #F0F0F0">
+<body>
 <div id="header"></div>
 <div class="container">
 <div><h2>Lista de Produtos</h2><br></div>
@@ -50,6 +50,7 @@ $.ajax({
     });
   }
 });
+
 function deletarProduto(){
 	swal({   
 		title: "",   
