--- a/WebContent/html5/users/newpedido.html
+++ b/WebContent/html5/users/newpedido.html
@@ -15,7 +15,7 @@
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.min.js"></script>
 	<script type="text/javascript" src="../../js/jsPDF/jspdf.plugin.autotable.js"></script>
 </head>
-<body onload="updateClock()" style="background-color: #F0F0F0">
+<body onload="updateClock()">
 	<div id="header"></div>
 	<div class="container">
 		<h2>Pedido</h2><br>
