--- a/WebContent/html5/admin/home.html
+++ b/WebContent/html5/admin/home.html
@@ -10,7 +10,7 @@
 	<script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
 	<link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 </head>
-<body style="background-color: #F0F0F0">
+<body>
 <div id="header"></div>
 <div class="container">
 <h1 align="center" style="align:middle;">Bem-vindo!</h1>
