--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -8,7 +8,7 @@
 <script src="../../js/jquery/jquery.dynatable.js" type="text/javascript"></script>
 <link href="../../css/jquery.dynatable.css" rel="stylesheet" media="screen">
 </head>
-<body style="background-color: #F0F0F0">
+<body>
 <div id="header"></div>
 <div class="container">
 <div><h2>Lista de Usuários</h2><br></div>
