--- a/WebContent/html5/login.html
+++ b/WebContent/html5/login.html
@@ -7,45 +7,25 @@
         <script src="../css/sweetalert-master/dist/sweetalert.min.js"></script>
         <link rel="stylesheet" type="text/css" href="../css/sweetalert-master/dist/sweetalert.css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="../css/style.css" />
+        <link rel="stylesheet" type="text/css" href="../css/mycss.css" />
         <script src="../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 		<script src="../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
     </head>
     <body>
-        <div class="container">
-                <label for="email">E-mail</label>
-                <input type="email" id='email' placeholder="E-mail">
-                <label for="password">Senha</label>
-                <input type="password" id='password' placeholder="Senha">
-                <input type="submit" id="submit" value="Entrar" onclick="valida()">
+        <div class="container login-container">           
+            <div class="divcenter">
+                <form method="post" action="admin/home.html">                   
+                    <input type="email" id='email' placeholder="E-mail" onfocus="this.placeholder = ''" onblur="this.placeholder = 'E-mail'">                  
+                    <input type="password" id='password' placeholder="Senha" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Senha'">
+                    <button>Entrar</button>
+                </form>
+            </div>            
         </div>
+        <div id="footer"></div>
         <script>
-           
-        	function supportsPlaceholder() {
-                return 'placeholder' in document.createElement('input') && 'placeholder' in document.createElement('textarea');
-            }
-            
-            jQuery(function ($) {
-                function supportsPlaceholder() {
-                    return 'placeholder' in document.createElement('input') &&
-                            'placeholder' in document.createElement('textarea');
-                }
-                if (!supportsPlaceholder()) {
-                    $('html').addClass('no-placeholder');
-                }
+            $(document).ready(function () {
+                $("#footer").load('users/footer.html');
             });
-			
-            function valida(){
-            	var email = $("#email").val();
-	            var senha = $("#password").val();
-	            	if (email == "admin@admin.com" && senha == "admin") {
-	            		window.location = "admin/newproduto.html";
-					} else if(email == "user@user.com" && senha == "user"){
-						window.location = "users/newproduto.html";
-					}else{
-						swal("","Usuário e/ou senha inválido")
-					}
-            }
         </script>
     </body>
 </html>
