--- a/WebContent/html5/users/newproduto.html
+++ b/WebContent/html5/users/newproduto.html
@@ -8,7 +8,7 @@
 	<script src="../../js/jquery/jquery-2.1.4.min.js" type="text/javascript"></script>
 	<script src="../../js/jquery/jquery.serializejson.js"	type="text/javascript"></script>
 </head>
-    <body style="background-color: #F0F0F0">
+    <body>
     	<div id="header"></div>
         <div class="container">
         	<div><h2>Cadastro de Produtos</h2><br></div>
@@ -39,10 +39,10 @@
                 </div>
                 <div class="form-group">
                     <div class="col-sm-1">
-                        <input type="submit" id="submit" class="btn btn-primary" value="Salvar">
+                        <button type="submit" id="submit" class="btn btn-primary" value="Salvar">Salvar</button>
                     </div>
                     <div class="col-sm-1">
-                        <input type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">
+                        <button type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">Limpa Formulário</button>
                     </div>
                 </div>
             </form>
