WORKING ON UPDATE DATE

--- a/WebContent/html5/admin/newproduto.html
+++ b/WebContent/html5/admin/newproduto.html
@@ -38,10 +38,8 @@
                     </div>                   
                 </div>
                 <div class="form-group">
-                    <div class="col-sm-1">
+                    <div class="col-sm-offset">
                         <input type="submit" id="submit" class="btn btn-primary" value="Salvar">
-                    </div>
-                    <div class="col-sm-1">
                         <input type="submit" class="btn btn-default" value="Limpar Formulário" onclick="limpa_form()">
                     </div>
                 </div>
