--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -39,6 +39,38 @@ $.ajax({
   }
 });
 
+function deletaUser(id){
+	swal({   
+		title: "",   
+		text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
+		type: "",   
+		showCancelButton: true,
+		confirmButtonColor: "#337ab7",   
+		confirmButtonText: "Sim",   
+		cancelButtonText: "Não",   
+		closeOnConfirm: false,   
+		closeOnCancel: true }, 
+		function(isConfirm){   
+			if (isConfirm) {
+				$.ajax({
+				     type: "POST",
+				     url: "http://localhost:8080/VirtualQueue/VQ/user/deleta",
+				     data: JSON.stringify(id),
+				     contentType: "application/json; charset=utf-8",
+				     dataType: "long",
+				     processData: true,
+				     success: function (vdata, status, jqXHR) {
+				    	 window.location = "users.html";
+				     },
+				     error: function (xhr) {
+				         alert("Erro" + xhr.responseText);
+				     }
+			});
+	}});
+}
+
+function deletarProduto(id){}
+
 $(document).ready(function(){
 	$("#header").load('menu.html');
 	$("#footer").load('footer.html');
