--- a/WebContent/html5/users/produtos.html
+++ b/WebContent/html5/users/produtos.html
@@ -32,22 +32,46 @@
 </div>
 <div id="footer"></div>
 <script>
-
 $.ajax({
   url: '/VirtualQueue/VQ/produto/list',
   success: function(data){
-    $('#my-table').dynatable({
-      dataset: {
-        records: data
-    }
-  });
+    $('#my-table').dynatable({		
+      dataset: {records: data}
+    });
   }
 });
 
-function deletarProduto(){
-	swal("","Você não tem permissão para deletar")
+function deletarProduto(id){
+	swal({   
+		title: "",   
+		text: "Deseja realmente deletar este produto?\n (esta ação não poderá ser desfeita)",   
+		type: "",   
+		showCancelButton: true,
+		confirmButtonColor: "#337ab7",   
+		confirmButtonText: "Sim",   
+		cancelButtonText: "Não",   
+		closeOnConfirm: false,   
+		closeOnCancel: true }, 
+		function(isConfirm){   
+			if (isConfirm) {
+				$.ajax({
+				     type: "POST",
+				     url: "http://localhost:8080/VirtualQueue/VQ/produto/deleta",
+				     data: JSON.stringify(id),
+				     contentType: "application/json; charset=utf-8",
+				     dataType: "long",
+				     processData: true,
+				     success: function (vdata, status, jqXHR) {
+				    	 window.location = "produtos.html";
+				     },
+				     error: function (xhr) {
+				         alert("Erro" + xhr.responseText);
+				     }
+			});
+	}});
 }
-
+function deletaUser(){
+}
 $(document).ready(function(){
 	$("#header").load('menu.html');
 	$("#footer").load('footer.html');
